# ibp-enm

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: validate_corpus.py
src/ibp_enm/: __init__.py  algebra.py  analysis.py  analyzer.py  archetypes.py  band.py  baselines.py  benchmark.py  cache.py  carving.py  corpus_builder.py  fetch.py  functional_sites.py  gnca.py  gnca_trainer.py  graph_data.py  instruments.py  lens_stack.py  rules.py  synthesis.py  thermodynamics.py  thresholds.py  trace.py
tests/: test_algebra.py  test_analysis.py  test_benchmark.py  test_cache.py  test_cross_validation.py  test_flow_grammar_integration.py  test_lens_stack.py  test_rules.py  test_thermodynamic_band.py  test_thresholds.py  test_trace.py
